# MAI_skat

./: README.md
AI&DA/lab02/: lab02.ipynb
AI&DA/lab03/: lab03.ipynb
AI&DA/lab04/: lab04.ipynb
AI/lab01/: Book.md  README.md
AIDA/: README.md
AIDA2/: README.md
AIF/: README.md  lab01.ipynb  lab03.py
Artifical_Intelligence/: README.md
BRM/: Makefile  README.md  docker-compose.yml  package-lock.json
CG/: README.md
CS/: README.md
Computer_Practice/: README.md
Computing_Systems/: README.md
DA/: README.md
DA2/: README.md
DA2/cp2/src/: CMakeLists.txt  Huffman.hpp  TCompressTree.cpp  TCompressTreeNode.hpp  TDecompressTreeNode.cpp  TDecompressTreeNode.hpp
DBSQL/: README.md
DM/: README.md
DS/: README.md
DSK/: Dockerfile  README.md  config.yml  docker-compose.yml  main.py  requirements.txt
Databases/: README.md
Discrete_Analysis/: README.md
Discrete_Mathematics/: Hinges.cpp  README.md
FI/: README.md
FI2/: README.md
FP/: README.md
Functional_Programming/: README.md
LP/: README.md
Logical_Programming/: README.md
Numerical_Methods/: report.docx
OOP/: README.md
OS/: README.md
Object_Oriented_Programming/lab8/: CMakeLists.txt  TBinaryTree.cpp  report.docx  tallocation_block.cpp  tqueue.hpp
Olymp2/: README.md
Olymp3/: README.md
Olympiad_Programming_2/: report.docx
Operation_Systems/: README.md
PE/: README.md
PGP/: README.md
PSB/: README.md  docker-compose.yml
PY/: Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  requirements.txt
TM/: README.md
Theoretical_Mechanics/: README.md
(+1745 files in other folders)
